--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -1,5 +1,5 @@
 @font-face {
-    font-family: "Roboto-Regular";
+    font-family: "Roboto";
     src: url(../fonts/Roboto/Roboto-Regular.ttf) format("truetype");
 }
 
