--- a/styles/style.css
+++ b/styles/style.css
@@ -2,7 +2,13 @@
     --white: #fff;
     --orange: #e76f51;
     --grey: #D2D2D2;
+    --grey-100: #8d8d8d;
+    --grey-10: rgb(141, 141, 141, .1);
     --dark: #3B3735;
+    --bg-color: #FAF4F2;
+    --primary-font: Roboto, Arial, Helvetica, sans-serif;
+    --primary-font-md: Roboto-Medium, Arial, Helvetica, sans-serif;
+    --secondary-font: Archivo-Black, Arial, Helvetica, sans-serif;
 }
 
 html {
@@ -22,7 +28,8 @@ body {
     /* 26px */
     font-size: 1.6rem;
     /* => 16px */
-    font-family: "Roboto";
+    font-family: var(--primary-font);
+    background-color: var(--bg-color);
 }
 
 /* 
@@ -56,12 +63,12 @@ a {
 */
 
 .btn {
+    width: 16rem;
+    height: 5rem;
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 16rem;
-    height: 5rem;
-    font-family: "Roboto-Medium";
+    font-family: var(--primary-font-md);
     font-size: 1.8rem;
     background-color: var(--orange);
     color: var(--white);
@@ -70,6 +77,12 @@ a {
     -moz-border-radius: 2.5rem;
     -ms-border-radius: 2.5rem;
     -o-border-radius: 2.5rem;
+    transition: all 250ms ease-in-out;
+    -webkit-transition: all 250ms ease-in-out;
+    -moz-transition: all 250ms ease-in-out;
+    -ms-transition: all 250ms ease-in-out;
+    -o-transition: all 250ms ease-in-out;
+    margin-inline: auto;
 }
 
 /* 
@@ -86,7 +99,7 @@ a {
         url(../images/header-bg.jpg);
     background-position: center;
     background-size: cover;
-    min-height: 85vh;
+    min-height: 90vh;
     border-bottom-left-radius: 10rem;
     border-bottom-right-radius: 10rem;
 }
@@ -141,7 +154,6 @@ a {
 
 .menu {
     display: none;
-    /* display: flex; */
 }
 
 .menu__item {
@@ -209,7 +221,7 @@ a {
 
 .mobile-nav-menu__title {
     font-size: 2rem;
-    font-family: "Archivo-Black";
+    font-family: var(--secondary-font);
     color: var(--white);
     padding-bottom: 1rem;
     border-bottom: 1px solid var(--orange);
@@ -284,7 +296,7 @@ a {
 }
 
 .mobile-nav-menu__link {
-    font-family: "Roboto-Medium";
+    font-family: var(--primary-font-md);
     color: var(--white);
     border: 1px solid var(--white);
     display: block;
@@ -303,7 +315,7 @@ a {
     -o-transition: all 250ms ease-in-out;
 }
 
-.mobile-nav-menu__link:hover{
+.mobile-nav-menu__link:hover {
     background-color: var(--white);
     color: var(--orange);
 }
@@ -327,7 +339,7 @@ a {
     width: 12.8rem;
     color: var(--white);
     font-size: 1.8rem;
-    font-family: "Roboto-Medium";
+    font-family: var(--primary-font-md);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -456,14 +468,14 @@ a {
 
 .header-content__title {
     font-size: 4.5rem;
-    font-family: "Archivo-Black";
+    font-family: var(--secondary-font);
     line-height: 1.2;
     max-width: 34rem;
     margin: 0 auto 2.3rem auto;
 }
 
 .header-content__caption {
-    font-family: "Roboto";
+    font-family: var(--primary-font);
     font-size: 1.8rem;
     max-width: 34rem;
     margin: 0 auto 2rem auto;
@@ -471,4 +483,200 @@ a {
 
 .header-content__link {
     margin: 0 auto;
+}
+
+
+/* 
+
+============================
+        main
+============================
+
+*/
+
+
+/* .main {} */
+
+
+/* 
+
+============================
+        services section
+============================
+
+*/
+
+
+.services {
+    margin-top: -11rem;
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -1rem;
+    margin-right: -1rem;
+}
+
+.service {
+    background-color: var(--white);
+    width: 30rem;
+    margin-bottom: 2rem;
+    border-radius: 2rem;
+    -webkit-border-radius: 2rem;
+    -moz-border-radius: 2rem;
+    -ms-border-radius: 2rem;
+    -o-border-radius: 2rem;
+    color: var(--dark);
+    padding: 6rem 2rem;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex-grow: 1;
+    margin-left: 1rem;
+    margin-right: 1rem;
+}
+
+.service__img {
+    display: block;
+}
+
+.service__title {
+    font-family: var(--secondary-font);
+    font-size: 1.8rem;
+    margin: 2.2rem 0 .8rem 0;
+}
+
+
+/* 
+
+==================================
+        destinations section
+==================================
+
+*/
+
+
+.destinations {
+    text-align: center;
+    margin: 8rem 0 10rem;
+}
+
+.destinations__title {
+    font-family: var(--secondary-font);
+    font-size: 3rem;
+    max-width: 34rem;
+    margin: 2.5rem auto;
+    line-height: 1.4;
+}
+
+.destinations__places {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -1rem;
+    margin-right: -1rem;
+}
+
+.place {
+    width: 30rem;
+    background-color: var(--white);
+    border-radius: 2rem;
+    -webkit-border-radius: 2rem;
+    -moz-border-radius: 2rem;
+    -ms-border-radius: 2rem;
+    -o-border-radius: 2rem;
+    padding: 2rem;
+    color: var(--dark);
+    margin-bottom: 2rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
+    flex-grow: 1;
+    overflow: hidden;
+}
+
+.place__banner {
+    position: relative;
+    border-radius: 2rem;
+    -webkit-border-radius: 2rem;
+    -moz-border-radius: 2rem;
+    -ms-border-radius: 2rem;
+    -o-border-radius: 2rem;
+    overflow: hidden;
+    height: 18rem;
+}
+
+.place__img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.place__like {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 2rem;
+    right: 2rem;
+    background-color: var(--white);
+    width: 4rem;
+    height: 4rem;
+    border-radius: 1.2rem;
+    -webkit-border-radius: 1.2rem;
+    -moz-border-radius: 1.2rem;
+    -ms-border-radius: 1.2rem;
+    -o-border-radius: 1.2rem;
+}
+
+.place__like-icon--fill {
+    fill: var(--orange);
+}
+
+.place__price {
+    width: 14rem;
+    height: 4rem;
+    padding: .5rem 0;
+    border-radius: 1rem;
+    -webkit-border-radius: 1rem;
+    -moz-border-radius: 1rem;
+    -ms-border-radius: 1rem;
+    -o-border-radius: 1rem;
+    font-family: var(--primary-font-md);
+    color: var(--orange);
+    background-color: var(--white);
+    position: absolute;
+    bottom: -1.4rem;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+}
+
+.place__title {
+    font-family: var(--secondary-font);
+    margin-top: 4rem;
+    margin-bottom: 1rem;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+}
+
+.place__caption {
+    font-family: var(--primary-font);
+}
+
+.place__link {
+    background-color: var(--grey-10);
+    color: var(--grey-100);
+    margin-top: 2.5rem;
+}
+
+.destinations__btn {
+    margin-top: 3rem;
+    border: 1px solid var(--orange);
+    background-color: var(--white);
+    color: var(--orange);
+}
+
+.destinations__btn:hover {
+    background-color: var(--orange);
+    color: var(--bg-color);
 }
