--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,187 @@
+/* 
+
+============================
+        fonts
+============================
+
+*/
+
+
+@font-face {
+    font-family: Roboto;
+    src: url(../fonts/Roboto/Roboto-Regular.ttf) format("truetype");
+}
+
+@font-face {
+    font-family: Roboto-Medium;
+    src: url(../fonts/Roboto/Roboto-Medium.ttf) format("truetype");
+}
+
+@font-face {
+    font-family: Archivo-Black;
+    src: url(../fonts/Archivo/Archivo-Black.ttf) format("truetype");
+}
+
+
+/* 
+
+============================
+        reset style
+============================
+
+*/
+
+*,
+*::after,
+*::before {
+    box-sizing: border-box;
+}
+
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
+}
+
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+    display: block;
+}
+
+body {
+    line-height: 1;
+}
+
+ol,
+ul {
+    list-style: none;
+}
+
+blockquote,
+q {
+    quotes: none;
+}
+
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+    content: '';
+    content: none;
+}
+
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+}
+
+a {
+	text-decoration: none;
+}
+
+
+
+/* 
+
+============================
+        S T A R T
+============================
+
+*/
+
 :root {
 	--main-color: #e76f51;
 	--second-color: #f8e1db;
@@ -33,27 +217,10 @@ body {
 	font-family: var(--primary-font);
 	background-color: var(--bg-color);
 	position: relative;
+	overflow-x: hidden;
 }
 
-/* 
 
-============================
-        reset style
-============================
-
-*/
-
-a {
-	text-decoration: none;
-}
-
-/* 
-
-============================
-        helper class
-============================
-
-*/
 
 /* 
 
@@ -64,7 +231,7 @@ a {
 */
 
 .btn {
-	width: 16rem;
+	max-width: 16rem;
 	height: 5rem;
 	display: flex;
 	justify-content: center;
@@ -86,6 +253,11 @@ a {
 	margin-inline: auto;
 }
 
+.btn:hover{
+	background-color: var(--dark);
+	color: var(--white);
+}
+
 /* 
 
 ============================
@@ -94,12 +266,20 @@ a {
 
 */
 
+.container {
+    width: 100%;
+    padding-right: 2rem;
+    padding-left: 2rem;
+    margin-right: auto;
+    margin-left: auto;
+}
+
 .header {
 	background: linear-gradient(rgba(59, 55, 53, 0.5), rgba(59, 55, 53, 0.5)),
 		url(../images/header-bg.jpg);
 	background-position: center;
 	background-size: cover;
-	min-height: 90vh;
+	min-height: 70rem;
 	border-bottom-left-radius: 10rem;
 	border-bottom-right-radius: 10rem;
 }
@@ -268,6 +448,8 @@ a {
 	margin-bottom: 1rem;
 }
 
+
+
 /* 
 
 ================================
@@ -347,9 +529,6 @@ a {
 	color: var(--main-color);
 }
 
-/* .mobile-nav-menu__link--border {} */
-
-/*
 
 
 /* 
@@ -393,6 +572,8 @@ a {
 	background-color: var(--white);
 	color: var(--main-color);
 }
+
+
 
 /* 
 
@@ -483,6 +664,8 @@ a {
 	-o-transform: translateY(-8px) rotate(-45deg);
 }
 
+
+
 /* 
 
 ============================
@@ -516,6 +699,7 @@ a {
 	margin: 0 auto;
 }
 
+
 /* 
 
 ============================
@@ -524,7 +708,11 @@ a {
 
 */
 
+
+
 /* .main {} */
+
+
 
 /* 
 
@@ -573,6 +761,8 @@ a {
 	margin: 2.2rem 0 0.8rem 0;
 }
 
+
+
 /* 
 
 ==================================
@@ -584,6 +774,30 @@ a {
 .destinations {
 	text-align: center;
 	margin: 6rem 0 10rem;
+	position: relative;
+}
+
+.destinations::before,
+.destinations::after {
+	content: "";
+	width: 70rem;
+	height: 70rem;
+	position: absolute;
+	background-size: contain;
+	background-repeat: no-repeat;
+	z-index: -1;
+}
+
+.destinations::before {
+	background-image: url(../images/svgs/shape1.svg);
+	top: -23rem;
+	right: -25rem;
+}
+
+.destinations::after {
+	background-image: url(../images/svgs/shape2.svg);
+	left: -46rem;
+	bottom: 36rem;
 }
 
 .destinations__title {
@@ -707,6 +921,8 @@ a {
 	color: var(--bg-color);
 }
 
+
+
 /* 
 
 ==================================
@@ -728,6 +944,27 @@ a {
 	-ms-border-radius: 2rem;
 	-o-border-radius: 2rem;
 	margin: 2rem 0 15rem 0;
+	position: relative;
+	overflow: hidden;
+}
+
+.newsletter::before {
+	content: "";
+	position: absolute;
+	top: 24rem;
+	left: -18rem;
+	right: 0;
+	bottom: 0;
+	width: 50rem;
+	height: 50rem;
+	background: url(../images/svgs/shape3.svg);
+	background-size: contain;
+	background-repeat: no-repeat;
+}
+
+.newsletter__content,
+.newsletter__banner {
+	z-index: 2;
 }
 
 .newsletter__content {
@@ -794,6 +1031,7 @@ a {
 	-ms-border-radius: 2rem;
 	-o-border-radius: 2rem;
 	cursor: pointer;
+	box-shadow: 0.2rem 0.6rem 2rem rgb(231, 111, 81, 0.5);
 }
 
 .newsletter__banner {
@@ -804,6 +1042,8 @@ a {
 .newsletter__img {
 	width: 100%;
 }
+
+
 
 /* 
 
@@ -833,8 +1073,11 @@ a {
 	-ms-border-radius: 2rem;
 	-o-border-radius: 2rem;
 	position: absolute;
-	right: 2rem;
 	top: -2.5rem;
+	right: 2rem;
+	left: 2rem;
+	margin: 0 auto;
+	box-shadow: 0 0 1rem rgb(59, 55, 53, 0.1);
 }
 
 .footer__title {
@@ -844,15 +1087,13 @@ a {
 	margin-bottom: 1rem;
 }
 
-.footer__wrapper {
-	display: flex;
-	justify-content: space-between;
-}
-
 .footer > .container {
 	position: relative;
 	padding-top: 10rem;
 }
+
+
+
 
 /* 
 
@@ -865,19 +1106,14 @@ a {
 .footer__left {
 	max-width: 60rem;
 }
-.footer-content {
-}
+
 .footer-content__description {
 	margin-bottom: 2rem;
+	text-align: justify;
 }
-.footer-app {
-}
-.footer__title {
-}
-.footer-app__link {
-}
-.footer-app__img {
-}
+
+
+
 
 /* 
 
@@ -889,14 +1125,13 @@ a {
 
 .footer__right {
 	display: flex;
+	flex-wrap: wrap;
 }
 .footer__list {
 	width: 18rem;
+	margin-bottom: 1rem;
 }
-.footer-pages {
-}
-.footer-pages__item {
-}
+
 .footer-pages__link {
 	color: var(--dark);
 	transition: all 200ms ease-in-out;
@@ -915,4 +1150,167 @@ a {
 	text-align: center;
 	font-size: 1.4rem;
 	margin-top: 6rem;
+}
+
+
+/* 
+
+===================================================
+        media queries
+===================================================
+
+*/
+
+@media (max-width: 380px) {
+
+	.header-content__title {
+		font-size: 4rem;
+	}
+
+	.newsletter__title {
+		max-width: 20rem;
+	}
+	.footer {
+		text-align: center;
+	}
+
+	.footer__right {
+		justify-content: center;
+	}
+}
+
+@media (min-width: 576px) {
+	.container {
+        /* 540px */
+        width: 54rem;
+    }
+}
+
+@media (min-width: 768px) {
+	.container {
+        /* 720px */
+        width: 72rem;
+    }
+
+	.nav__btn,
+	.mobile-nav-menu {
+		display: none;
+	}
+
+	.menu {
+		display: flex;
+	}
+
+	.newsletter {
+		flex-direction: row;
+		justify-content: space-between;
+		text-align: left;
+	}
+
+	.newsletter::before {
+		width: auto;
+		height: auto;
+		top: -5rem;
+		left: -40rem;
+		background-size: auto;
+		background-position: center left;
+	}
+
+	.newsletter__content {
+		padding-right: 2.5rem;
+	}
+
+	.newsletter__title {
+		margin-bottom: 0.5rem;
+	}
+}
+
+@media (min-width: 992px) {
+	.container {
+        /* 960px */
+        width: 96rem;
+    }
+
+	.nav__links {
+		display: flex;
+	}
+
+	.header-content__caption {
+		max-width: 50rem;
+	}
+
+	.newsletter::before {
+		top: -10rem;
+		left: -30rem;
+	}
+
+	.footer__scroll {
+		left: auto;
+	}
+
+	.footer__wrapper {
+		display: flex;
+		justify-content: space-between;
+	}
+
+	.footer__left {
+		flex-basis: 45%;
+	}
+
+	.footer__list {
+		width: 16rem;
+	}
+}
+
+@media (min-width: 1200px) {
+	.container {
+        /* 1140px */
+        width: 114rem;
+    }
+
+	.header {
+		min-height: 80rem;
+	}
+	
+	.newsletter {
+		padding-inline: 3rem;
+	}
+
+	.newsletter::before {
+		top: -15rem;
+		left: -15rem;
+	}
+
+	.newsletter__content {
+		flex-basis: auto;
+		width: 60rem;
+	}
+
+	.newsletter__caption {
+		max-width: 48rem;
+	}
+
+	.newsletter__banner {
+		flex-basis: auto;
+		width: 40rem;
+	}
+
+	.footer__left {
+		flex-basis: 48%;
+	}
+
+	.footer__list {
+		width: 18rem;
+	}
+}
+
+@media (min-width: 1400px) {
+	.container {
+        /* 1370px */
+        width: 137rem;
+    }
+
+	.newsletter {
+		padding: 3rem 6rem;
+	}
 }
